--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ social-network-links:
   email: "stephen.mckeon@rmc-cmr.ca"
 #  rss: true  # remove this line if you don't want to show an RSS link at the bottom
 #  facebook: deanattali
-  github: Leeeeeeroy404
+  github: SteveMcKeon
 #  twitter: daattali
 #  patreon: DeanAttali
 #  youtube: c/daattali
@@ -86,7 +86,7 @@ rss-description: This website is a virtual proof that I'm awesome
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "Leeeeeeroy404.github.io"
+url-pretty: "SteveMcKeon.github.io"
 
 # Excerpt word length - Truncate the excerpt of each post on the feed page to the specified number of words
 excerpt_length: 50
