--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ round-avatar: true
 # Select the social network links that you want to show in the footer.
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
-  email: "stephen.mckeon@rmc-cmr.ca"
+  email: "stephen@mckeon.ca"
 #  rss: true  # remove this line if you don't want to show an RSS link at the bottom
 #  facebook: deanattali
   github: SteveMcKeon
@@ -86,7 +86,7 @@ rss-description: This website is a virtual proof that I'm awesome
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "SteveMcKeon.github.io"
+url-pretty: "mckeon.ca"
 
 # Excerpt word length - Truncate the excerpt of each post on the feed page to the specified number of words
 excerpt_length: 50
