--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ social-network-links:
 #  youtube: c/daattali
 #  medium: yourname
 #  reddit: yourname
-  linkedin: stephen-mckeon-881b45a4
+  linkedin: stephenmckeon
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
