--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ author: Stephen McKeon
 # --- List of links in the navigation bar --- #
 
 navbar-links:
-  Contact: "aboutme"
+  Contact: "contact"
 #  Courses:
 #    - EEE243: "EEE243"
 #    - EEE404: "EEE404"
