--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ round-avatar: true
 # If you want to have an image logo in the top-left corner instead of having the title of the website,
 # then specify the following parameter
 #title-img: /path/to/image
-
+toc: false
 
 # --- Footer social media links --- #
 
@@ -238,6 +238,7 @@ defaults:
       path: ""
       type: "posts"
     values:
+      toc: false
       layout: "post"
       comments: true  # add comments to all blog posts
       social-share: false # add social media sharing buttons to all blog posts
