--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,8 @@ navbar-links:
     - Online IDE: "https://repl.it"
     - CyberChef: "https://gchq.github.io/CyberChef/"
 
+url: https://mckeon.ca
+baseurl: /
 # --- Logo --- #
 
 # Image to show in the navigation bar - works best with a square image
