--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # --- Required options --- #
 
 # Name of website 
-title: Capt Stephen McKeon
+title: Maj Stephen McKeon
 
 # Your name to show in the footer
 author: Stephen McKeon
